z-index-problem-fixed

--- a/themes/base/asset/sass/_base.scss
+++ b/themes/base/asset/sass/_base.scss
@@ -658,7 +658,7 @@ figcaption{
     position: sticky;
     top: 0;
     left: 0;
-    z-index: 99;
+    z-index: 2;
     margin: 0 -2px;
 
     .filter-icon {
